--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,10 @@ name = "zero2prod"
 version = "0.1.0"
 edition = "2024"
 
-[target.x86_64-apple-darwin]
-rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
-
 [lib]
 path="src/lib.rs"
 
-[binary]
+[[bin]]
 path="src/main.rs"
 name="zero2prod"
 
@@ -26,7 +23,7 @@ sqlx = { version = "0.8.6", default-features = false, features = [
     "postgres", 
     "uuid", 
     "chrono", 
-    "migrate" 
+    "migrate",
 ] }
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 uuid = { version = "1", features = ["v4"] }
