--- a/spec.yaml
+++ b/spec.yaml
@@ -10,6 +10,7 @@ services:
     repo: aymerrric/zero2prod
   health_check:
     http_path: /health_check
+  http_port : 8000
   instance_count: 1
   instance_size_slug: basic-xxs
   routes:
