--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,4 @@ tracing-log = "0.2"
 once_cell = "1.21.3"
 secrecy = {version = "0.10.3", features=["serde"]}
 tracing-actix-web = "0.7.20"
+serde-aux = "4.7.0"
