--- a/spec.yaml
+++ b/spec.yaml
@@ -2,6 +2,22 @@ name : zero2prod
 region : fra
 services:
 - name: zero2prod
+  envs:
+  - key: APP_DATABASE__USERNAME
+    scope: RUN_TIME
+    value: ${newsletter.USERNAME}
+  - key: APP_DATABASE__PASSWORD
+    scope: RUN_TIME
+    value: ${newsletter.PASSWORD}
+  - key: APP_DATABASE__HOST
+    scope: RUN_TIME
+    value: ${newsletter.HOSTNAME}
+  - key: APP_DATABASE__PORT
+    scope: RUN_TIME
+    value: ${newsletter.PORT}
+  - key: APP_DATABASE__DATABASE_NAME
+    scope: RUN_TIME
+    value: ${newsletter.DATABASE}
   dockerfile_path: Dockerfile
   source_dir: .
   github:
@@ -15,3 +31,10 @@ services:
   instance_size_slug: basic-xxs
   routes:
   - path: /
+databases:
+  - engine: PG
+  # Database name
+    name: newsletter
+    num_nodes: 1
+    size: db-s-dev-database
+    version: "12"
