--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,12 @@ once_cell = "1.21.3"
 secrecy = {version = "0.10.3", features=["serde"]}
 tracing-actix-web = "0.7.20"
 serde-aux = "4.7.0"
+unicode-segmentation = "1.12.0"
+claim = "0.5.0"
+validator = "0.20.0"
+
+
+[dev-dependencies]
+fake = "4.4"
+quickcheck = "1.0.3"
+quickcheck_macros = "1.1.0"
