--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ name="zero2prod"
 actix-web = "4"
 chrono = "0.4.42"
 config = "0.15.19"
-reqwest = "0.12.28"
+reqwest = {version = "0.12.28", features = ["json", "rustls-tls"]}
 tracing = { version = "0.1", features = ["log"] }
 serde = { version = "1.0.228", features = ["derive"]}
 sqlx = { version = "0.8.6", default-features = false, features = [
@@ -34,11 +34,13 @@ secrecy = {version = "0.10.3", features=["serde"]}
 tracing-actix-web = "0.7.20"
 serde-aux = "4.7.0"
 unicode-segmentation = "1.12.0"
-claim = "0.5.0"
 validator = "0.20.0"
 
 
 [dev-dependencies]
 fake = "4.4"
+claim = "0.5.0"
 quickcheck = "1.0.3"
 quickcheck_macros = "1.1.0"
+wiremock = "0.6.5"
+serde_json = "1.0.148"
