--- a/configuration/configuration.yaml
+++ b/configuration/configuration.yaml
@@ -6,4 +6,7 @@ database:
   database_name: "newsletter"
 application:
   port : 8000
-  
+email_client:
+  base_url : "localhost"
+  sender_email : "test@gmail.com"
+  authorization_token : "test"
