--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ tracing-actix-web = "0.7.20"
 serde-aux = "4.7.0"
 unicode-segmentation = "1.12.0"
 validator = "0.20.0"
+rand = {version = "0.9.2", features = ["std_rng"]}
 
 
 [dev-dependencies]
