--- a/configuration/configuration.yaml
+++ b/configuration/configuration.yaml
@@ -8,6 +8,6 @@ application:
   port : 8000
 email_client:
   base_url : "localhost"
-  sender_email : "test@gmail.com"
+  sender_email : "aymeric.sabrie@polytechnique.edu"
   authorization_token : "test"
   timeout_millisecond : 10000
