--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,8 @@ serde-aux = "4.7.0"
 unicode-segmentation = "1.12.0"
 validator = "0.20.0"
 rand = {version = "0.9.2", features = ["std_rng"]}
+thiserror = "2.0.17"
+anyhow = "1.0.100"
 
 
 [dev-dependencies]
