--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ validator = "0.20.0"
 rand = {version = "0.9.2", features = ["std_rng"]}
 thiserror = "2.0.17"
 anyhow = "1.0.100"
+base64 = "0.22.1"
 
 
 [dev-dependencies]
