--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,8 @@ rand = {version = "0.9.2", features = ["std_rng"]}
 thiserror = "2.0.17"
 anyhow = "1.0.100"
 base64 = "0.22.1"
+argon2 = { version = "0.5.3", features = ["std"] }
+rand_core = { version = "0.9.3", features = ["std"] }
 
 
 [dev-dependencies]
