--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ name="zero2prod"
 actix-web = "4"
 chrono = "0.4.42"
 config = "0.15.19"
-reqwest = {version = "0.12.28", features = ["json", "rustls-tls"]}
+
+
 tracing = { version = "0.1", features = ["log"] }
 serde = { version = "1.0.228", features = ["derive"]}
 sqlx = { version = "0.8.6", default-features = false, features = [
@@ -41,7 +42,15 @@ anyhow = "1.0.100"
 base64 = "0.22.1"
 argon2 = { version = "0.5.3", features = ["std"] }
 rand_core = { version = "0.9.3", features = ["std"] }
-
+urlencoding = "2.1.3"
+htmlescape = "0.3.1"
+hmac = { version = "0.12", features = ["std"] }
+sha2 = "0.10"
+hex = "0.4.3"
+[dependencies.reqwest]
+version = "0.12.28"
+default-features = false
+features = ["json", "rustls-tls", "cookies"]
 
 [dev-dependencies]
 fake = "4.4"
