--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ config = "0.15.19"
 
 
 tracing = { version = "0.1", features = ["log"] }
-serde = { version = "1.0.228", features = ["derive"]}
+serde = { version = "1.0.228", features = ["derive",]}
 sqlx = { version = "0.8.6", default-features = false, features = [
     "runtime-tokio-rustls",  
     "macros", 
@@ -27,7 +27,7 @@ sqlx = { version = "0.8.6", default-features = false, features = [
     "migrate",
 ] }
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
-uuid = { version = "1", features = ["v4"] }
+uuid = { version = "1", features = ["v4", "serde"] }
 tracing-bunyan-formatter = "0.3.10"
 tracing-log = "0.2"
 once_cell = "1.21.3"
@@ -45,7 +45,9 @@ rand_core = { version = "0.9.3", features = ["std"] }
 actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
 hmac = { version = "0.12", features = ["std"] }
 sha2 = "0.10"
+actix-web-lab = "0.15"
 hex = "0.4.3"
+serde_json = "1.0.148"
 [dependencies.reqwest]
 version = "0.12.28"
 default-features = false
